<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="equipment"
            type="google.architecture.coremodel.datamodel.http.entities.VideoListData.BodyBean.Equipment"/>
        <variable
            name="position"
            type="int"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <VideoView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_200dp" />

                <LinearLayout
                    android:background="?attr/colorPrimary"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_72dp">

                    <LinearLayout
                        android:id="@+id/monitor_video_back"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/size_90dp"
                        android:orientation="vertical">

                        <ImageView
                            android:padding="@dimen/size_8dp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_48dp"
                            android:src="@drawable/monitoring_video_back_n_ic" />

                        <TextView
                            android:gravity="center"
                            android:textSize="@dimen/text_size_16sp"
                            android:text="@string/monitoring_video_back_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/monitor_video_photograph"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/size_90dp"
                        android:orientation="vertical">

                        <ImageView
                            android:padding="@dimen/size_8dp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_48dp"
                            android:src="@drawable/monitoring_video_photograph_n_ic" />

                        <TextView
                            android:gravity="center"
                            android:textSize="@dimen/text_size_16sp"
                            android:text="@string/monitoring_video_photograph_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/monitor_video_download"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/size_90dp"
                        android:orientation="vertical">

                        <ImageView
                            android:padding="@dimen/size_8dp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_48dp"
                            android:src="@drawable/monitoring_video_download_n_ic" />

                        <TextView
                            android:gravity="center"
                            android:textSize="@dimen/text_size_16sp"
                            android:text="@string/monitoring_video_download_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/monitor_video_collect"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/size_90dp"
                        android:orientation="vertical">

                        <ImageView
                            android:padding="@dimen/size_8dp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_48dp"
                            android:src="@drawable/monitoring_video_collect_n_ic" />

                        <TextView
                            android:gravity="center"
                            android:textSize="@dimen/text_size_16sp"
                            android:text="@string/monitoring_video_collect_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold"
                        android:textColor="#333333"
                        android:layout_margin="@dimen/size_16dp"
                        android:text="@string/monitor_video_detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="@dimen/text_size_16sp"
                        android:textColor="#666666"
                        android:layout_marginTop="@dimen/size_16dp"
                        android:layout_marginLeft="@dimen/size_32dp"
                        tools:text="@string/monitor_video_detail_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="@dimen/text_size_16sp"
                        android:textColor="#666666"
                        android:layout_marginTop="@dimen/size_16dp"
                        android:layout_marginLeft="@dimen/size_32dp"
                        android:text="@string/monitor_video_detail_factory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="@dimen/text_size_16sp"
                        android:textColor="#666666"
                        android:layout_marginTop="@dimen/size_16dp"
                        android:layout_marginLeft="@dimen/size_32dp"
                        android:text="@string/monitor_video_detail_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="@dimen/text_size_16sp"
                        android:textColor="#666666"
                        android:layout_marginTop="@dimen/size_16dp"
                        android:layout_marginBottom="@dimen/size_16dp"
                        android:layout_marginLeft="@dimen/size_32dp"
                        android:text="@string/monitor_video_detail_way"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </LinearLayout>
</layout>